force-app/main/default/objects/Assessment_Safety_Plan__c/Assessment_Safety_Plan__c.object-meta.xml
<CustomObject>
    <label>Assessment Safety Plan</label>
    <nameField>
        <displayFormat>ASP{00000}</displayFormat>
        <label>Safety Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Safety Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>