force-app/main/default/objects/Assessment_Safety_Plan__c/fields/Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Action_Required__c</fullName>
    <label>Action Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>