force-app/main/default/objects/Assessment_Safety_Plan__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Assessment Safety Plans</relationshipLabel>
    <relationshipName>Assessment_Safety_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>