force-app/main/default/objects/Assessment_Safety_Plan__c/fields/Danger_Influence_Qeustion__c.field-meta.xml
<CustomField>
    <fullName>Danger_Influence_Qeustion__c</fullName>
    <label>Danger Influence Qeustion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAFEC_Caregiver_fails_to_protect__c</fullName>
            </value>
            <value>
                <fullName>SAFEC_Caregiver_made_a_plausible_threat__c</fullName>
            </value>
            <value>
                <fullName>SAFEC_There_has_been_current_act__c</fullName>
            </value>
            <value>
                <fullName>SAFEC_Child_sexual_abuse_is_suspected__c</fullName>
            </value>
            <value>
                <fullName>SAFEC_Caregiver_describes_the_child__c</fullName>
            </value>
            <value>
                <fullName>SAFEC_Cargiver_s_suspected_or_observed__c</fullName>
            </value>
            <value>
                <fullName>SAFEC_Caregiver_s_emotional_instability__c</fullName>
            </value>
            <value>
                <fullName>SAFEC_Caregiver_s_explanation__c</fullName>
            </value>
            <value>
                <fullName>SAFEC_Caregivers_justification_or_denial__c</fullName>
            </value>
            <value>
                <fullName>SAFEC_Caregiver_does_not_or_refuse__c</fullName>
            </value>
            <value>
                <fullName>SAFEC_Domestic_violence_exists__c</fullName>
            </value>
            <value>
                <fullName>SAFEC_Caregiver_does_not_meet_the_childs__c</fullName>
            </value>
            <value>
                <fullName>SAFEC_The_childs_whereabouts_are_unknown__c</fullName>
            </value>
            <value>
                <fullName>SAFEC_The_child_has_special_needs__c</fullName>
            </value>
            <value>
                <fullName>SAFEC_The_child_is_extremely_anxious__c</fullName>
            </value>
            <value>
                <fullName>SAFEC_The_child_is_unable_to_protect__c</fullName>
            </value>
            <value>
                <fullName>SAFEC_Previous_services_to_the_caregiver__c</fullName>
            </value>
            <value>
                <fullName>SAFEC_There_have_been_multiple_reports__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>