force-app/main/default/objects/Assessment_Safety_Plan__c/fields/Date_to_be_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_to_be_Completed__c</fullName>
    <label>Date to be Completed</label>
    <type>DateTime</type>
</CustomField>