force-app/main/default/objects/Assessment_Safety_Plan__c/fields/Re_evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_evaluation_Date__c</fullName>
    <label>Re-evaluation Date</label>
    <type>DateTime</type>
</CustomField>