force-app/main/default/objects/Assessment_Safety_Plan__c/fields/Responsible_Parties__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Parties__c</fullName>
    <label>Responsible Parties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>