force-app/main/default/objects/Assessment_Safety_Plan__c/fields/Specific_Danger_Influence__c.field-meta.xml
<CustomField>
    <fullName>Specific_Danger_Influence__c</fullName>
    <label>Specific Danger Influence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>